--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^13.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0"
   },
