--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^7.7.0",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -18,26 +19,30 @@
     "@react-navigation/native-stack": "^7.2.0",
     "axios": "^1.8.1",
     "expo": "~52.0.31",
-    "expo-blur": "^14.0.3",
+    "expo-blur": "^14.1.4",
     "expo-camera": "^16.0.16",
     "expo-document-picker": "^13.0.3",
     "expo-image-manipulator": "^13.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-location": "^18.0.10",
+    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.0.1",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^13.14.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.3",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
